# askama_web

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
askama_web/: Cargo.toml
askama_web/src/: lib.rs
askama_web/src/implementation/: actix_web_4.rs  axum_core_0_4.rs  axum_core_0_5.rs  cot_0_3.rs  cot_0_4.rs  mod.rs  pavex_0_2.rs  poem_3.rs  rocket_0_5.rs  salvo_core_0_76.rs  salvo_core_0_77.rs  salvo_core_0_78.rs  salvo_core_0_79.rs  salvo_core_0_80.rs  salvo_core_0_81.rs  trillium_0_2.rs  viz_core_0_10.rs  warp_0_3.rs  warp_0_4.rs
askama_web_derive/: Cargo.toml  README.md
askama_web_derive/src/: lib.rs
test-actix-web-4/: Cargo.toml
test-actix-web-4/tests/: hello-world.rs
test-axum-0.7/: Cargo.toml
test-axum-0.7/tests/: hello-world.rs
test-axum-0.8/: Cargo.toml  templates  tests
test-axum-0.8-no-derive/: Cargo.toml
test-axum-0.8-no-derive/tests/: hello-world.rs
test-axum-0.8/tests/: hello-world.rs
test-cot-0.3/: Cargo.toml
test-cot-0.3/tests/: hello-world.rs
test-cot-0.4/: Cargo.toml
test-cot-0.4/tests/: hello-world.rs
test-pavex-0.2/: Cargo.toml
test-pavex-0.2/tests/: hello-world.rs
test-poem-3/: Cargo.toml
test-poem-3/tests/: hello-world.rs
test-rocket-0.5/: Cargo.toml
test-rocket-0.5/tests/: hello-world.rs
test-salvo-0.76/: Cargo.toml
test-salvo-0.76/tests/: hello-world.rs
test-salvo-0.77/: Cargo.toml
test-salvo-0.77/tests/: hello-world.rs
test-salvo-0.78/: Cargo.toml
test-salvo-0.79/: Cargo.toml  templates
test-salvo-0.80/: Cargo.toml  tests
test-salvo-0.81/: Cargo.toml
test-trillium-0.2/: Cargo.toml
test-trillium-0.2/templates/: fail.html
test-trillium-0.2/tests/: hello-world.rs
test-viz-0.10/: Cargo.toml
test-viz-0.10/tests/: hello-world.rs
test-warp-0.3/: Cargo.toml
test-warp-0.3/tests/: hello-world.rs
test-warp-0.4/: Cargo.toml
test-warp-0.4/tests/: hello-world.rs
