[workspace]
resolver = "2"
members = [
    "askama_web",
    "askama_web_derive",
    "test-actix-web-4",
    "test-axum-0.7",
    "test-axum-0.8",
    "test-poem-3",
    "test-rocket-0.5",
    "test-salvo-0.76",
    "test-salvo-0.77",
    "test-trillium-0.2",
    "test-warp-0.3",
]

[workspace.lints.rust]
unknown_lints = { level = "allow", priority = -1 }
unsafe_code = { level = "forbid", priority = -1 }

absolute_paths_not_starting_with_crate = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
warnings = "warn"

[workspace.lints.clippy]
collapsible_match = "warn"
expect_used = "warn"
match_bool = "warn"
match_ref_pats = "warn"
match_same_arms = "warn"
match_single_binding = "warn"
needless_bool = "deny"
needless_late_init = "warn"
needless_match = "warn"
redundant_guards = "warn"
redundant_pattern = "warn"
redundant_pattern_matching = "warn"
single_match = "warn"
single_match_else = "warn"
unwrap_used = "warn"
