[package]
name = "askama_web"
version = "0.13.1"
edition = "2021"
description = "A compatibility add-on for Askama to support many different web frameworks"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
homepage = "https://askama.readthedocs.io/"
repository = "https://github.com/rinja-rs/askama_web/"
license = "MIT OR Apache-2.0"
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]

[dependencies]
askama = { version = "0.13.0", default-features = false, features = ["std"] }
askama_web_derive = { version = "0.1.0", path = "../askama_web_derive", optional = true }

actix_web_4 = { package = "actix-web", version = "4.0.0", optional = true, default-features = false }
axum_core_0_4 = { package = "axum-core", version = "0.4.0", optional = true, default-features = false }
axum_core_0_5 = { package = "axum-core", version = "0.5.0", optional = true, default-features = false }
http_0_2 = { package = "http", version = "0.2.0", optional = true, default-features = false }
http_1 = { package = "http", version = "1.0.0", optional = true, default-features = false }
http_body_util_0_1 = { package = "http-body-util", version = "0.1.3", optional = true, default-features = false }
log_0_4 = { package = "log", version = "0.4.0", optional = true, default-features = false }
poem_3 = { package = "poem", version = "3.0.0", optional = true, default-features = false }
rocket_0_5 = { package = "rocket", version = "0.5.0", optional = true, default-features = false }
salvo_core_0_76 = { package = "salvo_core", version = "0.76.0", optional = true, default-features = false }
salvo_core_0_77 = { package = "salvo_core", version = "0.77.0", optional = true, default-features = false }
salvo_core_0_78 = { package = "salvo_core", version = "0.78.0", optional = true, default-features = false }
tracing_0_1 = { package = "tracing", version = "0.1.0", optional = true, default-features = false }
trillium_0_2 = { package = "trillium", version = "0.2.0", optional = true, default-features = false }
viz_core_0_10 = { package = "viz-core", version = "0.10.0", optional = true, default-features = false }
warp_0_3 = { package = "warp", version = "0.3.3", optional = true, default-features = false }

[features]
default = ["derive"]

derive = ["dep:askama_web_derive"]

"actix-web-4" = ["dep:actix_web_4"]
"axum-0.7" = ["axum-core-0.4"]
"axum-0.8" = ["axum-core-0.5"]
"axum-core-0.4" = ["dep:axum_core_0_4", "dep:http_1"]
"axum-core-0.5" = ["dep:axum_core_0_5", "dep:http_1"]
"poem-3" = ["dep:poem_3", "dep:http_1"]
"rocket-0.5" = ["dep:rocket_0_5"]
"salvo-0.76" = ["salvo_core-0.76"]
"salvo-0.77" = ["salvo_core-0.77"]
"salvo_core-0.76" = ["dep:salvo_core_0_76", "dep:http_1"]
"salvo_core-0.77" = ["dep:salvo_core_0_77", "dep:http_1"]
"salvo_core-0.78" = ["dep:salvo_core_0_78", "dep:http_1"]
"trillium-0.2" = ["dep:trillium_0_2"]
"viz-0.10" = ["viz-core-0.10"]
"viz-core-0.10" = ["dep:viz_core_0_10", "dep:http_1", "dep:http_body_util_0_1"]
"warp-0.3" = ["dep:warp_0_3", "dep:http_0_2"]

eprintln = []
"log-0.4" = ["dep:log_0_4"]
"tracing-0.1" = ["dep:tracing_0_1"]
