[package]
name = "askama_web"
version = "0.15.0"
edition = "2024"
description = "A compatibility add-on for Askama to support many different web frameworks"
keywords = ["markup", "template", "jinja2", "html"]
categories = ["template-engine"]
homepage = "https://askama.readthedocs.io/"
repository = "https://github.com/askama-rs/askama_web/"
license = "MIT OR Apache-2.0"
rust-version = "1.88"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]

[dependencies]
askama = { version = "0.15.0", default-features = false, features = ["std"] }
askama_web_derive = { version = "0.2.0", path = "../askama_web_derive", optional = true }

actix_web_4 = { package = "actix-web", version = "4.0.0", optional = true, default-features = false }
axum_core_0_4 = { package = "axum-core", version = "0.4.0", optional = true, default-features = false }
axum_core_0_5 = { package = "axum-core", version = "0.5.0", optional = true, default-features = false }
bytes_1 = { package = "bytes", version = "1.10.1", optional = true, default-features = false }
cot_0_3 = { package = "cot", version = "0.3.0", optional = true, default-features = false }
cot_0_4 = { package = "cot", version = "0.4.0", optional = true, default-features = false }
http_0_2 = { package = "http", version = "0.2.0", optional = true, default-features = false }
http_1 = { package = "http", version = "1.0.0", optional = true, default-features = false }
log_0_4 = { package = "log", version = "0.4.0", optional = true, default-features = false }
poem_3 = { package = "poem", version = "3.0.0", optional = true, default-features = false }
rocket_0_5 = { package = "rocket", version = "0.5.0", optional = true, default-features = false }
tracing_0_1 = { package = "tracing", version = "0.1.0", optional = true, default-features = false }
trillium_0_2 = { package = "trillium", version = "0.2.0", optional = true, default-features = false }
warp_0_3 = { package = "warp", version = "0.3.3", optional = true, default-features = false }
warp_0_4 = { package = "warp", version = "0.4.0", optional = true, default-features = false }

[features]
default = ["derive"]

derive = ["dep:askama_web_derive"]

"actix-web-4" = ["dep:actix_web_4", "dep:bytes_1"]
"axum-0.7" = ["axum-core-0.4"]
"axum-0.8" = ["axum-core-0.5"]
"axum-core-0.4" = ["dep:axum_core_0_4", "dep:bytes_1", "dep:http_1"]
"axum-core-0.5" = ["dep:axum_core_0_5", "dep:bytes_1", "dep:http_1"]
"cot-0.3" = ["dep:cot_0_3"]
"cot-0.4" = ["dep:cot_0_4"]
"poem-3" = ["dep:poem_3", "dep:bytes_1", "dep:http_1"]
"rocket-0.5" = ["dep:rocket_0_5"]
"trillium-0.2" = ["dep:trillium_0_2"]
"warp-0.3" = ["dep:warp_0_3", "dep:bytes_1", "dep:http_0_2"]
"warp-0.4" = ["dep:warp_0_4", "dep:bytes_1", "dep:http_1"]

eprintln = []
"log-0.4" = ["dep:log_0_4"]
"tracing-0.1" = ["dep:tracing_0_1"]

[lints]
workspace = true
