[package]
name = "askama_web_derive"
version = "0.1.0"
edition = "2021"
homepage = "https://askama.readthedocs.io/"
repository = "https://github.com/rinja-rs/askama_web/"
license = "MIT OR Apache-2.0"
rust-version = "1.83"
description = "Proc-macros used by `askama_web`"
keywords = []
categories = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg=docsrs"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.0"
quote = "1.0.0"
syn = "2.0.3"

[lints]
workspace = true
