[package]
name = "test-actix-web-4"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
askama = { workspace = true, features = ["derive"] }
askama_web = { workspace = true, features = ["derive", "actix-web-4"] }

actix-rt = { version = "2.10.0", default-features = false }
actix-test = "0.1.5"
actix-web = { version = "4.10.2", default-features = false }
bytes = { version = "1.10.1" }
