[package]
name = "test-axum-0_8-no-derive"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
askama = { workspace = true, features = ["derive"] }
askama_web = { workspace = true, default-features = false, features = ["axum-0.8"] }

axum = { version = "0.8.3", default-features = false }
http-body-util = "0.1.3"
tokio = { version = "1.44.2", features = ["macros", "rt"] }
tower = { version = "0.5.2", features = ["util"] }
