[package]
name = "test-poem-3"
version = "0.12.0"
edition = "2021"
publish = false

[dev-dependencies]
askama = "0.13.0"
askama_web = { path = "../askama_web", version = "0.13.1", features = ["poem-3"] }

poem = { version = "3.1.9", default-features = false, features = ["test"] }
tokio = { version = "1.44.2", features = ["macros", "rt"] }
