[package]
name = "test-poem-3"
version = "0.12.0"
edition = "2021"
publish = false

[dev-dependencies]
askama.workspace = true
askama_web = { workspace = true, features = ["poem-3"] }

poem = { version = "3.1.9", default-features = false, features = ["test"] }
tokio = { version = "1.44.2", features = ["macros", "rt"] }
