[package]
name = "test-poem-3"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
askama = { workspace = true, features = ["derive"] }
askama_web = { workspace = true, features = ["derive", "poem-3"] }

poem = { version = "3.1.12", default-features = false, features = ["test"] }
tokio = { version = "1.44.2", features = ["macros", "net", "rt"] }
