[package]
name = "test-salvo-0_76"
version = "0.0.1-pre.0"
edition = "2021"
publish = false

[dev-dependencies]
askama = "0.12.1"
askama_web = { path = "../askama_web", version = "0.0.1-pre.0", features = ["salvo-0.76"] }

salvo = { version = "0.77.0", default-features = false, features = ["test"] }
tokio = { version = "1.43.0", features = ["macros", "rt"] }
