[package]
name = "test-salvo-0_77"
version = "0.12.0"
edition = "2021"
publish = false

[dev-dependencies]
askama = "0.13.0"
askama_web = { path = "../askama_web", version = "0.13.0", features = ["salvo_core-0.77"] }

salvo = { version = "0.77.0", default-features = false, features = ["test"] }
tokio = { version = "1.43.0", features = ["macros", "rt"] }
