[package]
name = "test-salvo-0_78"
version = "0.12.0"
edition = "2021"
publish = false

[dev-dependencies]
askama = "0.13.0"
askama_web = { path = "../askama_web", version = "0.13.0", features = ["salvo_core-0.78"] }

salvo = { version = "0.78.0", default-features = false, features = ["test"] }
tokio = { version = "1.44.2", features = ["macros", "rt"] }
