[package]
name = "test-salvo-0_78"
version = "0.12.0"
edition = "2021"
publish = false

[dev-dependencies]
askama = { workspace = true, features = ["derive"] }
askama_web = { workspace = true, features = ["derive", "salvo-0.78"] }

salvo = { version = "0.80.0", default-features = false, features = ["test"] }
tokio = { version = "1.44.2", features = ["macros", "rt"] }
