[package]
name = "test-salvo-0_80"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
askama = { workspace = true, features = ["derive"] }
askama_web = { workspace = true, features = ["derive", "salvo-0.80"] }

salvo = { version = "0.84.2", default-features = false, features = ["test"] }
tokio = { version = "1.44.2", features = ["macros", "rt"] }
