[package]
name = "test-trillium-0_2"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
askama = { workspace = true, features = ["derive"] }
askama_web = { workspace = true, features = ["derive", "trillium-0.2"] }

trillium = { version = "0.2.20", default-features = false }
trillium-testing = "0.7.0"
