[package]
name = "test-warp-0_3"
version = "0.12.0"
edition = "2021"
publish = false

[dev-dependencies]
askama = { workspace = true, features = ["derive"] }
askama_web = { workspace = true, features = ["derive", "warp-0.3"] }

tokio = { version = "1.44.2", features = ["macros", "rt"] }
warp = { version = "0.3.7", default-features = false }
