[package]
name = "test-warp-0_4"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
askama = { workspace = true, features = ["derive"] }
askama_web = { workspace = true, features = ["derive", "warp-0.4"] }

tokio = { version = "1.44.2", features = ["macros", "net", "rt"] }
warp = { version = "0.4.0", default-features = false, features = ["test"] }
